syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message AgeDefinitionDTO {
  string name = 1;
  int32 index = 2;
}
