syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroBattleDefinitionDTO {
  string id = 1;
  repeated string waves = 3;
  bytes disabled_player_slot_ids = 5;
//  BattleSuggestionComponentDTO
  google.protobuf.Any packed_battle_suggestion_component = 8;
}
