syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message CityInitDefinitionDTO {
  string id = 1;
  // InitialResourceComponentDTO, InitialGridComponentDTO
  repeated google.protobuf.Any packed_components = 2;
}
    