syntax = "proto3";
import "resource_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message WonderLevelUpComponentDTO {
  string id = 1;
  WonderUpgradeCostsDto upgrade_costs = 4;
}

message WonderUpgradeCostsDto {
  string id = 1;
  repeated WonderUpgradeCostDto costs = 2;
}

message WonderUpgradeCostDto {
  int32 level = 1;
  WonderCrateWrapperDto crates_wrapper = 2;
}

message WonderCrateWrapperDto {
  repeated WonderCrateDto crates = 1;
}

message WonderCrateDto {
  string id = 1;
  int32 amount = 2;
  ResourceDTO fill_resource = 5;
}
