syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroUnitDefinitionDTO {
  string id = 1;
  string name = 2;
  string type = 3;
  string color = 4;
  // HeroUnitStatValueDefinitionDTO
  repeated google.protobuf.Any packed_stats = 6;
}
