syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message HeroUnitStatValueDefinitionDTO {
  string value_id = 1;
  string stat_id = 2;
  float value = 3;
}
