syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message ResearchRequirementDTO {
  string technology_id = 1;
}
