syntax = "proto3";

import "google/protobuf/any.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message TechnologyDefinitionDTO {
  string id = 1;
  string name = 2;
  string age = 3;
  int32 horizontal_index = 4;
  int32 vertical_index = 5;
  string city = 6;
  //ResearchComponentDTO
  google.protobuf.Any packed_research_component = 7;
}


