syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message ResourceDTO {
  string id = 1;
  int32 amount = 2;
  int32 u4 = 4;
  int32 u5 = 5;
}
