syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message IncreaseExpansionRightRewardDTO {
  string city = 2;
  int32 amount = 3;
}
