syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message StorageCapRewardDTO {
  string resource_id = 2;
  int32 amount = 3;
}
