syntax = "proto3";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message UnitStatDto {
  string type = 3;
  float value = 4;
}
